feat: adicionado rotas para remover/atualizar usuario por identificador
